--- a/pom.xml
+++ b/pom.xml
@@ -141,16 +141,19 @@
       </plugin>
 
       <!-- Surefire (TestNG) -->
-      <plugin>
+     <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.2.2</version>
         <configuration>
+          <forkCount>0</forkCount> <!-- disables forked JVM to avoid X11 issues -->
+          <reuseForks>false</reuseForks>
           <suiteXmlFiles>
             <suiteXmlFile>master.xml</suiteXmlFile>
           </suiteXmlFiles>
         </configuration>
       </plugin>
+
       
       
       
