--- a/pom.xml
+++ b/pom.xml
@@ -97,40 +97,26 @@
       <artifactId>commons-email</artifactId>
       <version>1.6.0</version>
     </dependency>
-    
-    
-    <!-- new dependecies for allure reports -->
 
+    <!-- Allure -->
+    <dependency>
+      <groupId>io.qameta.allure</groupId>
+      <artifactId>allure-testng</artifactId>
+      <version>2.29.1</version>
+    </dependency>
 
-<dependency>
-  <groupId>io.qameta.allure</groupId>
-  <artifactId>allure-testng</artifactId>
-  <version>2.29.1</version>
-</dependency>
+    <!-- WebDriverManager -->
+    <dependency>
+      <groupId>io.github.bonigarcia</groupId>
+      <artifactId>webdrivermanager</artifactId>
+      <version>6.2.0</version>
+    </dependency>
 
-<dependency>
-  <groupId>io.github.bonigarcia</groupId>
-  <artifactId>webdrivermanager</artifactId>
-  <version>6.2.0</version>
-</dependency>
-
-
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
   </dependencies>
 
   <build>
     <plugins>
-      <!-- Compiler -->
+      <!-- Compiler Plugin -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -140,24 +126,21 @@
         </configuration>
       </plugin>
 
-      <!-- Surefire (TestNG) -->
-     <plugin>
+      <!-- Surefire Plugin -->
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.2.2</version>
         <configuration>
-          <forkCount>0</forkCount> <!-- disables forked JVM to avoid X11 issues -->
-          <reuseForks>false</reuseForks>
+          <forkCount>1</forkCount>
+          <reuseForks>true</reuseForks>
           <suiteXmlFiles>
             <suiteXmlFile>master.xml</suiteXmlFile>
           </suiteXmlFiles>
         </configuration>
       </plugin>
 
-      
-      
-      
     </plugins>
   </build>
-</project>
 
+</project>
