--- a/src/test/resourcess/config.properties
+++ b/src/test/resourcess/config.properties
@@ -2,5 +2,5 @@ URL=https://tutorialsninja.com/demo/
 email=harishveerapoor6@gmail.com
 password=b5yCQeH#ptsZn
 
-execution_env=remote
-#execution_env=local
+#execution_env=remote
+execution_env=local
